crates/cribo/tests/snapshots/bundled_code@importlib_preserved_stateful_failure.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_stateful_failure/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('stateful_flaky', '_cribo_init___cribo_fd06b8_stateful_flaky', 'stateful_flaky', False)
stateful_flaky = _cribo.types.SimpleNamespace(__name__='stateful_flaky', __initializing__=False, __initialized__=False)
_cribo_finder.bind('stateful_flaky', stateful_flaky)
def _cribo_init___cribo_fd06b8_stateful_flaky(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    attempts = self.__dict__.get("attempts", 0) + 1
    self.attempts = attempts
    print("attempt", attempts)
    raise RuntimeError(f"failed on attempt {attempts}")
    self.__initialized__ = True
    self.__initializing__ = False
    return self
stateful_flaky.__init__ = _cribo_init___cribo_fd06b8_stateful_flaky
"""A failed preserved import discards partial namespace mutations.\n\nPython removes a failed module and retries with a FRESH namespace, so a\nmodule counting its own attempts in globals() observes attempt 1 both times.\n"""
importlib = _cribo.importlib
def load(**options):
    return importlib.import_module("stateful_flaky", **options)
for round_number in (1, 2):
    try:
        load()
    except RuntimeError as error:
        print(f"round {round_number}: {error}")
