crates/cribo/tests/snapshots/bundled_code@importlib_static.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_static/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('2024-config', '_cribo_init___cribo_5687a6__2024_config', '_2024_config', False)
_cribo_finder.register('for', '_cribo_init___cribo_ec6681_for_', 'for_', False)
_cribo_finder.register('def', '_cribo_init___cribo_944eb6_def_', 'def_', False)
_cribo_finder.register('class', '_cribo_init___cribo_004e55_class_', 'class_', False)
_cribo_finder.register('api-client', '_cribo_init___cribo_64c186_api_client', 'api_client', False)
_cribo_finder.register('data-processor', '_cribo_init___cribo_d8297b_data_processor', 'data_processor', False)
data_processor = _cribo.types.SimpleNamespace(__name__='data-processor', __initializing__=False, __initialized__=False)
_cribo_finder.bind('data-processor', data_processor)
def _cribo_init___cribo_d8297b_data_processor(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module with hyphen in name - can't be imported with regular import statement."""

    class DataProcessor:

        def __init__(self):
            self.name = "Data Processor with Hyphen"

        def process(self, data):
            return f"Processing {data} with hyphenated module"
    DataProcessor.__module__ = 'data-processor'
    DataProcessor.__qualname__ = 'DataProcessor'
    self.DataProcessor = DataProcessor

    def get_processor_info():
        return "This is a data processor from a module with a hyphen"
    self.get_processor_info = get_processor_info
    PROCESSOR_VERSION = "1.0-hyphenated"
    self.PROCESSOR_VERSION = PROCESSOR_VERSION
    self.__initialized__ = True
    self.__initializing__ = False
    return self
data_processor.__init__ = _cribo_init___cribo_d8297b_data_processor
api_client = _cribo.types.SimpleNamespace(__name__='api-client', __initializing__=False, __initialized__=False)
_cribo_finder.bind('api-client', api_client)
def _cribo_init___cribo_64c186_api_client(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Another module with hyphen - demonstrating API client functionality."""

    class APIClient:

        def __init__(self, base_url="https://api.example.com"):
            self.base_url = base_url
            self.headers = {"User-Agent": "Hyphenated-Module-Client/1.0"}

        def make_request(self, endpoint):
            return f"Making request to {self.base_url}/{endpoint}"
    APIClient.__module__ = 'api-client'
    APIClient.__qualname__ = 'APIClient'
    self.APIClient = APIClient

    def create_client(url=None):
        return APIClient(url) if url else APIClient()
    self.create_client = create_client
    API_VERSION = "2.0-stable"
    self.API_VERSION = API_VERSION
    SUPPORTED_ENDPOINTS = ["users", "posts", "comments"]
    self.SUPPORTED_ENDPOINTS = SUPPORTED_ENDPOINTS
    self.__initialized__ = True
    self.__initializing__ = False
    return self
api_client.__init__ = _cribo_init___cribo_64c186_api_client
class_ = _cribo.types.SimpleNamespace(__name__='class', __initializing__=False, __initialized__=False)
_cribo_finder.bind('class', class_)
def _cribo_init___cribo_004e55_class_(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module named 'class' - a Python keyword that can't be used in import statements."""

    class MetaClass:

        def __init__(self, name):
            self.name = name
            self.type = "metaclass"

        def describe(self):
            return f"This is a {self.type} named {self.name}"
    MetaClass.__module__ = 'class'
    MetaClass.__qualname__ = 'MetaClass'
    self.MetaClass = MetaClass

    def create_class_instance(class_name):
        return MetaClass(class_name)
    self.create_class_instance = create_class_instance
    CLASS_TYPES = ["abstract", "concrete", "meta"]
    self.CLASS_TYPES = CLASS_TYPES
    DEFAULT_CLASS_NAME = "KeywordModule"
    self.DEFAULT_CLASS_NAME = DEFAULT_CLASS_NAME
    self.__initialized__ = True
    self.__initializing__ = False
    return self
class_.__init__ = _cribo_init___cribo_004e55_class_
def_ = _cribo.types.SimpleNamespace(__name__='def', __initializing__=False, __initialized__=False)
_cribo_finder.bind('def', def_)
def _cribo_init___cribo_944eb6_def_(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module named 'def' - another Python keyword."""

    class FunctionDefinition:

        def __init__(self, func_name, params=None):
            self.name = func_name
            self.params = params or []

        def __str__(self):
            params_str = ", ".join(self.params)
            return f"def {self.name}({params_str})"
    FunctionDefinition.__module__ = 'def'
    FunctionDefinition.__qualname__ = 'FunctionDefinition'
    self.FunctionDefinition = FunctionDefinition

    def define_function(name, *args):
        return FunctionDefinition(name, list(args))
    self.define_function = define_function
    BUILTIN_FUNCTIONS = ["print", "len", "range", "sorted"]
    self.BUILTIN_FUNCTIONS = BUILTIN_FUNCTIONS
    DEFINITION_TEMPLATE = "def {}(): pass"
    self.DEFINITION_TEMPLATE = DEFINITION_TEMPLATE
    self.__initialized__ = True
    self.__initializing__ = False
    return self
def_.__init__ = _cribo_init___cribo_944eb6_def_
for_ = _cribo.types.SimpleNamespace(__name__='for', __initializing__=False, __initialized__=False)
_cribo_finder.bind('for', for_)
def _cribo_init___cribo_ec6681_for_(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module named 'for' - a Python keyword for loops."""

    class ForLoop:

        def __init__(self, iterable):
            self.iterable = iterable
            self.index = 0

        def iterate(self):
            results = []
            for item in self.iterable:
                results.append(f"Processing: {item}")
            return results
    ForLoop.__module__ = 'for'
    ForLoop.__qualname__ = 'ForLoop'
    self.ForLoop = ForLoop

    def create_loop(items):
        return ForLoop(items)
    self.create_loop = create_loop
    LOOP_TYPES = ["for", "while", "comprehension"]
    self.LOOP_TYPES = LOOP_TYPES
    MAX_ITERATIONS = 1000
    self.MAX_ITERATIONS = MAX_ITERATIONS
    self.__initialized__ = True
    self.__initializing__ = False
    return self
for_.__init__ = _cribo_init___cribo_ec6681_for_
_2024_config = _cribo.types.SimpleNamespace(__name__='2024-config', __initializing__=False, __initialized__=False)
_cribo_finder.bind('2024-config', _2024_config)
def _cribo_init___cribo_5687a6__2024_config(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module starting with a number - can't be imported with regular import."""

    class Config2024:
        YEAR = 2024
        VERSION = "2024.1.0"
        FEATURES = ["new-ui", "dark-mode", "api-v3"]

        @classmethod
        def get_config(cls):
            return {"year": cls.YEAR, "version": cls.VERSION, "features": cls.FEATURES}
    Config2024.__module__ = '2024-config'
    Config2024.__qualname__ = 'Config2024'
    self.Config2024 = Config2024

    def load_yearly_config():
        return Config2024()
    self.load_yearly_config = load_yearly_config
    SUPPORTED_YEARS = [2022, 2023, 2024]
    self.SUPPORTED_YEARS = SUPPORTED_YEARS
    CONFIG_PREFIX = "config-"
    self.CONFIG_PREFIX = CONFIG_PREFIX
    self.__initialized__ = True
    self.__initializing__ = False
    return self
_2024_config.__init__ = _cribo_init___cribo_5687a6__2024_config
"""Main module demonstrating importlib usage with static string literals."""
importlib = _cribo.importlib
data_processor = _cribo_init___cribo_d8297b_data_processor(data_processor)
api_client = _cribo_init___cribo_64c186_api_client(api_client)
class_module = _cribo_init___cribo_004e55_class_(class_)
def_module = _cribo_init___cribo_944eb6_def_(def_)
for_module = _cribo_init___cribo_ec6681_for_(for_)
config_2024 = _cribo_init___cribo_5687a6__2024_config(_2024_config)
def main():
    processor = data_processor.DataProcessor()
    print(f"Processor: {processor.name}")
    print(f"Processing result: {processor.process('test data')}")
    print(f"Processor info: {data_processor.get_processor_info()}")
    print(f"Processor version: {data_processor.PROCESSOR_VERSION}")
    print()
    client = api_client.create_client()
    print(f"API request: {client.make_request('users')}")
    print(f"API version: {api_client.API_VERSION}")
    print(f"Supported endpoints: {api_client.SUPPORTED_ENDPOINTS}")
    print()
    meta = class_module.create_class_instance("TestClass")
    print(f"Class description: {meta.describe()}")
    print(f"Class types: {class_module.CLASS_TYPES}")
    print(f"Default class name: {class_module.DEFAULT_CLASS_NAME}")
    print()
    func_def = def_module.define_function("calculate", "x", "y")
    print(f"Function definition: {func_def}")
    print(f"Builtin functions: {def_module.BUILTIN_FUNCTIONS}")
    print()
    loop = for_module.create_loop(["apple", "banana", "cherry"])
    print(f"Loop results: {loop.iterate()}")
    print(f"Loop types: {for_module.LOOP_TYPES}")
    print(f"Max iterations: {for_module.MAX_ITERATIONS}")
    print()
    config = config_2024.load_yearly_config()
    print(f"Year config: {config.get_config()}")
    print(f"Supported years: {config_2024.SUPPORTED_YEARS}")
    print(f"Config prefix: {config_2024.CONFIG_PREFIX}")
if __name__ == "__main__":
    main()
